argocd/kustomize/simple-web/example-dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-web
  labels:
    app: simple-web
  annotations:
    keel.sh/policy: force
    keel.sh/match-tag: 'true'
    keel.sh/pollSchedule: '@every 1m'
    keel.sh/trigger: poll
spec:
  selector:
    matchLabels:
      app: simple-web
  template:
    metadata:
      labels:
        app: simple-web
      annotations:
        sidecar.opentelemetry.io/inject: 'true'
    spec:
      serviceAccountName: simple
      containers:
      - name: app
        image: ghcr.io/kwangil77/simple-web
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
        readinessProbe:
          httpGet:
            path: /health
            port: 3000
        resources:
          limits:
            cpu: 500m
            memory: 1024Mi
          requests:
            cpu: 100m
            memory: 256Mi
      nodeSelector:
        kubernetes.io/arch: amd64
        team: devops
        service: devops-service
        performance_type: standard
